--- a/使用说明/RemoteNotes使用说明.ipynb
+++ b/使用说明/RemoteNotes使用说明.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# 1. 创建jupyter notebook\n",
-    "- 打开[mybinder]([http://mybinder.org)\n",
+    "- 打开[mybinder]([http://mybinder.org/)\n",
     "- 粘贴该仓库连接至`GitHub repository name or URL`\n",
     "- 点击`lunch`运行\n",
     "\n",
@@ -30,21 +30,6 @@
     "```\n",
     "\n",
     "# 注意：若不运行所有创建的文件在关闭mybinder后全部丢失**\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from gittle import GitUpload\n",
-    "file = \"untitled.txt\"\n",
-    "name = \"fengfeng0918\"\n",
-    "email = \"527282351@qq.com\"\n",
-    "password = \"******\"\n",
-    "Repository = \"RemoteNotes\"\n",
-    "GitUpload(file, name, email, password, Repository)"
    ]
   },
   {
