--- a/使用说明/RemoteNotes使用说明.ipynb
+++ b/使用说明/RemoteNotes使用说明.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "```\n",
     "\n",
-    "# 注意：若不运行所有创建的文件在关闭mybinder后全部丢失**\n"
+    "# 注意：若不运行,所有创建的文件在关闭mybinder后全部丢失\n"
    ]
   },
   {
